welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:5: error: illegal start of simple expression
	else {recule()}
        ^